# CNT_Research_Template

./: .gitignore  .gitlab-ci.yml  .gitmodules  .zenodo.json  Dockerfile  Dockerfile_devel  LICENSE.txt  README.md  REFERENCES.md  array_unit_tests.py  env.yml  repository_structure.html  repository_structure.md  repository_structure.zml  repository_structure_2.md  respoistory_structure.json  respoistory_structure.txt
.ci/: unit_tests.sh  update_manifest.py
.circleci/: config.yml  ds005_bids_fasttrack_outputs.txt  ds005_legacy_outputs.txt  ds054_fasttrack_outputs.txt  ds210_fasttrack_outputs.txt  ds210_outputs.txt
.maint/: contributors.json
.maint/ci/: check.sh  install.sh
Matlab/channel_processing/: reconcile_ch_names.m
Matlab/filters/: bandpass_filter.m
analysis/: ana_pipeline.mlx
analysis/connectivity/: armorf.m  calc_ai.m  coherence_calc.m  demean.m  faster_coherence_calc.m  ge_over_blocks.m  logdet.m  new_pearson_calc.m  pc_vector_calc.m  plv_calc.m  pseudo_distance_mt.m  steve_histcounts.m  test_robusttest.m  warn_test.m
analysis/helpfunc/: bar_error_plot.m  calcConn.m  extractMLData.m  plot_by_freq.m  plot_by_method.m  plot_by_ref.m  plot_clustergram.m  plot_soz_scatter.m  plot_volcano.m  remove_percent.m  updateLabel.m  volcano_process.asv  volcano_process.m
core_libraries/: README.md
core_libraries/CNT_research_tools/: config_example.json
core_libraries/submodules/: README.md
core_libraries/subtrees/: README.md
docs/: conf.py  outputs.rst  usage.rst  workflows.rst
enigmatoolbox/histology/: bb_moments_glasser_360.csv  bb_moments_schaefer_100.csv  bb_moments_schaefer_400.csv
epycom/validation/: util.py  (+1 more)
fmriprep/: __about__.py  config.py  conftest.py
matlab/: config.json
python/: README.md
scripts/: fetch_templates.py
test/: __init__.py  test_installer_m1_fallback.py  test_process.py  test_routines.py
unit_tests/: array_unit_tests.py
user_data/: README.txt
wrapper/: pyproject.toml
(+369 files in other folders)
